fix: allow page scrolling on mobile

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -185,6 +185,7 @@ body.manuscript-page {
     height: auto;
     min-height: 100vh;
     overflow-x: hidden;
+    overflow-y: auto;
   }
 
   :root {
